[gd_scene load_steps=34 format=2]

[ext_resource path="res://scripts/Enemies/HellDog.gd" type="Script" id=1]
[ext_resource path="res://assets/Characters/Enemies/undead-dog.png" type="Texture" id=2]
[ext_resource path="res://assets/imgs/hp-bar-bg-small.png" type="Texture" id=3]
[ext_resource path="res://sfx/shade2.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/imgs/hp-bar-prog-small.png" type="Texture" id=6]
[ext_resource path="res://sfx/shade14.wav" type="AudioStream" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 28, 24 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "attack"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 36, 37, 38, 39, 40, 41 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_call_method_finish_attack"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "dead"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 48, 49, 50, 51, 52, 53, 54 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_call_method_finish_dead"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "detect"
step = 0.111111
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.166667, 0.333333, 0.5, 0.666667, 0.833333 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.888889 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_call_method_finish_detect"
} ]
}

[sub_resource type="Animation" id=6]
resource_name = "run"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27, 28 ]
}

[sub_resource type="Animation" id=7]
resource_name = "walk"
loop = true
step = 0.0833333
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333, 0.666667, 0.75, 0.833333, 0.916667 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23 ]
}

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "attack"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "dead"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "detect"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "run"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=13]

[sub_resource type="AnimationNodeStateMachineTransition" id=14]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=15]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=16]

[sub_resource type="AnimationNodeStateMachineTransition" id=17]

[sub_resource type="AnimationNodeStateMachineTransition" id=18]

[sub_resource type="AnimationNodeStateMachineTransition" id=19]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=20]

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachineTransition" id=22]

[sub_resource type="AnimationNodeStateMachineTransition" id=23]

[sub_resource type="AnimationNodeStateMachine" id=24]
states/attack/node = SubResource( 8 )
states/attack/position = Vector2( 687, 204.333 )
states/dead/node = SubResource( 9 )
states/dead/position = Vector2( 916.333, 159 )
states/detect/node = SubResource( 10 )
states/detect/position = Vector2( 471, 60.3333 )
states/run/node = SubResource( 11 )
states/run/position = Vector2( 536.333, 157.667 )
states/walk/node = SubResource( 12 )
states/walk/position = Vector2( 265.667, 89.6667 )
transitions = [ "walk", "detect", SubResource( 13 ), "detect", "walk", SubResource( 14 ), "detect", "run", SubResource( 15 ), "run", "walk", SubResource( 16 ), "walk", "run", SubResource( 17 ), "run", "attack", SubResource( 18 ), "attack", "run", SubResource( 19 ), "walk", "dead", SubResource( 20 ), "run", "dead", SubResource( 21 ), "attack", "dead", SubResource( 22 ), "detect", "dead", SubResource( 23 ) ]
start_node = "walk"
end_node = "dead"
graph_offset = Vector2( 147.027, 0 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=25]

[sub_resource type="RectangleShape2D" id=26]
extents = Vector2( 44, 24 )

[sub_resource type="RectangleShape2D" id=27]
extents = Vector2( 36, 24 )

[node name="HellDog" type="KinematicBody2D" groups=["Enemies"]]
scale = Vector2( 0.4, 0.8 )
collision_layer = 2
collision_mask = 528
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -32 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
hframes = 12
vframes = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -12, -8 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/attack = SubResource( 3 )
anims/dead = SubResource( 4 )
anims/detect = SubResource( 5 )
anims/run = SubResource( 6 )
anims/walk = SubResource( 7 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 24 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 25 )

[node name="HPbar" type="TextureProgress" parent="."]
margin_left = -8.0
margin_top = -40.0
margin_right = 11.0
margin_bottom = -38.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 6 )
nine_patch_stretch = true

[node name="DeadArea" type="Area2D" parent="." groups=["EnemiesDefense"]]
rotation = 3.14159
scale = Vector2( 1, -1 )
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeadArea"]
position = Vector2( 3.99997, -8.00002 )
shape = SubResource( 26 )

[node name="RayDetect" type="RayCast2D" parent="."]
position = Vector2( -320, 0 )
enabled = true
cast_to = Vector2( -128, 0 )

[node name="RayBack" type="RayCast2D" parent="."]
position = Vector2( 240, 0 )
enabled = true
cast_to = Vector2( 168, 0 )

[node name="RayAttack" type="RayCast2D" parent="."]
position = Vector2( -72, 0 )
enabled = true
cast_to = Vector2( -72, 0 )

[node name="RayEnd" type="RayCast2D" parent="."]
position = Vector2( -36, 0 )
enabled = true
cast_to = Vector2( 0, 32 )
collision_mask = 528

[node name="RayFlip" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -56, 0 )
collision_mask = 528

[node name="AttackArea" type="Area2D" parent="." groups=["Enemies"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( -4, -8 )
shape = SubResource( 27 )

[node name="SwordHurt01" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
pitch_scale = 1.57

[node name="SwordHurt02" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
pitch_scale = 1.57

[connection signal="area_entered" from="DeadArea" to="." method="_on_DeadArea_area_entered"]
